--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,7 +1,7 @@
 image: python:3.12.3
 
 before_script:
-  - pip intall -r requirements.txt
+  - pip install -r requirements.txt
 
 pages:
   script:
